@@ -9,12 +9,6 @@ I moved files, where I do not know whether they are still needed into folder _ar
 
 TODOs:
 
-language main: create defines only for tables with table_user
-blocks xoops_version: only if table_blocks
-
-templates in xoops_version user: only if table is user side
-
-
 Permissions:
 implement autoapprove
 
