@@ -7,6 +7,7 @@
 - implementation of experience from wgtransifex (mamba/goffy)
 - fixed bug date in blocks (heyula/goffy)
 - replaced strtotime by \DateTime::createFromFormat (goffy)
+- creation of table components/links only if table is for user side (goffy)
 
 <h5>3.03 Alpha 5   [2020-06-09]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
